# claude-image-ssh

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  arch.md
.github/workflows/: release.yml
.serena/: project.yml
.trellis/: .template-hashes.json
.trellis/spec/backend/: quality-guidelines.md
.trellis/tasks/00-bootstrap-guidelines/: task.json
.trellis/tasks/06-23-clipboard-image-sync-mcp/: implement.md  task.json
.trellis/tasks/06-23-tauri-gui-sync-image-client/: prd.md  task.json
.trellis/tasks/06-24-add-usage-instructions/: prd.md  task.json
.trellis/tasks/archive/2026-06/06-23-clipboard-image-sync-mcp/: design.md  prd.md  task.json
.trellis/tasks/archive/2026-06/06-23-tauri-gui-sync-image-client/: design.md  implement.md  task.json
.trellis/workspace/huangmingbing/: index.md  journal-1.md
apps/sync_image_desktop/: index.html  package-lock.json  package.json
apps/sync_image_desktop/scripts/: apply-build-config.mjs
apps/sync_image_desktop/src/: App.tsx  styles.css
apps/sync_image_desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/sync_image_desktop/src-tauri/icons/: icon.icns
apps/sync_image_desktop/src-tauri/src/: lib.rs  main.rs
crates/sync_image_client/: Cargo.toml
crates/sync_image_client/src/: cli.rs  client.rs  hotkey_runtime.rs  image_input.rs  interaction.rs  lib.rs  main.rs  notify.rs  runtime.rs  upload.rs
crates/sync_image_core/: Cargo.toml
crates/sync_image_core/src/: config.rs  hotkey.rs  image_files.rs  lib.rs  paths.rs
crates/sync_image_mcp/: Cargo.toml
crates/sync_image_mcp/src/: latest.rs  lib.rs  main.rs  protocol.rs
docker/: Dockerfile.mcp
examples/: config.toml
