[workspace]
members = [
    "crates/sync_image_core",
    "crates/sync_image_client",
    "crates/sync_image_mcp",
    "apps/sync_image_desktop/src-tauri",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0.101"
base64 = "0.22"
chrono = { version = "0.4.43", default-features = false, features = ["clock", "std", "serde"] }
clap = { version = "4.5", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
rpassword = "7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10"
ssh2 = { version = "0.9", features = ["vendored-openssl"] }
toml = "0.9"
uuid = { version = "1", features = ["v4"] }
